@@ -3,22 +3,9 @@ extensions = mr.developer buildout.dumppickedversions
 unzip = true
 parts = instance site omelette zopepy roadrunner
 extends = 
-    http://dist.plone.org/release/3.3.3/versions.cfg
-versions = versions
+    http://dist.plone.org/release/3.3.4/versions.cfg
+    versions.cfg
 develop = .
-
-sources = sources
-sources-dir = extras
-auto-checkout =
-
-[versions]
-z3c.form = 2.2.0
-zope.schema = 3.4.0
-collective.z3cform.wizard = 1.0b2
-
-[sources]
-collective.z3cform.wizard 	= svn https://svn.plone.org/svn/collective/collective.z3cform.wizard/trunk
-Products.PloneFormGen		= svn https://svn.plone.org/svn/collective/Products.PloneFormGen/trunk
 
 [instance]
 recipe = plone.recipe.zope2instance
