@@ -1,0 +1,19 @@
+[buildout]
+versions = versions
+sources = sources
+sources-dir = extras
+auto-checkout =
+
+[versions]
+beatbox = 16.0
+collective.captcha = 1.4
+collective.z3cform.wizard = 1.0b2
+Products.PloneFormGen = 1.5.5
+Produts.salesforcebaseconnector = 1.2
+Products.salesforcepfgadapter = 1.6b2
+z3c.form = 2.2.0
+zope.schema = 3.4.0
+
+[sources]
+collective.z3cform.wizard   = svn https://svn.plone.org/svn/collective/collective.z3cform.wizard/trunk
+Products.PloneFormGen       = svn https://svn.plone.org/svn/collective/Products.PloneFormGen/trunk
