@@ -4,6 +4,10 @@ Changelog
 1.1 (unreleased)
 ----------------
 
+* When creating Leads in Salesforce, default to setting the Lead Source to
+  'Web'.  (Requires salesforcepfgadpater >= 1.6b2).
+  [davisagli]
+
 * Use the htmlValue method of form fields to process the values in the request
   before rendering a letter.  This makes it possible to set the values that
   will be displayed for a boolean field, for example.
